--- a/digital-clock/style.css
+++ b/digital-clock/style.css
@@ -4,70 +4,98 @@
      padding: 0;
      margin: 0;
 }
+
+/*dispaly for digital clock*/
 .banner{
      display: grid;
      grid-template-rows: 1fr 1fr;
+     box-shadow: 1px 1px 1pc rgb(31, 26, 30) ;
      border-radius: 10px;
-     box-shadow: 5px 5px 5pc rgb(224, 22, 197) ;
      margin: 10% auto;
      width: 30%;
      height: 10cm;
 }
 /*styling the profile area*/
 .banner .profile{
-     display: grid;
-     grid-template-columns: 1fr 2fr;
-     border-bottom: 1px solid black;
-     border-radius: 10px;
+     position: relative;
+     background-color: rgb(245, 250, 249);
+     border-bottom: 1px solid rgb(35, 40, 104);
      margin: 3px;
      height: 5cm;
 }
+
 /*style display for weather images*/
-.profile .img{
-     display: block;
-     position: relative;
-     text-align: center;
-     width: 1cm;
-     font-size: 20px;
-     background-image: url(/images/noon.png);
-     background-repeat: no-repeat;
-     background-position: center top;
-     color: yellow;
-     margin: 3px;
-     box-shadow: 2px 3px 5px yellow;
-     border-radius: 50%;
-     background-color: blueviolet;
-     padding-right: 10pc;
-}
-
-
-/*display for alerts of time */
-.profile .alert{
-     display: grid;
-     grid-template-rows: 2fr 1fr;
+.forecast{
+     position: absolute;
+     top: 15%;
+     left: 5%;
+     border: none;
      border-radius: 5px;
-     margin: 3px;
+     padding: 10px;
+     width: 2.5cm;
+     height: 2.5cm;
+     display: flex;
+     justify-content: center;
+     align-items: center;
 }
-.profile .alert .alert1{
-     display: inline;
-     position: relative;
-     font-size: 25px;
-     font-family: 'Playfair Display', serif;
-     top: 0%;
-     border-radius: 5px;
-     margin: 0px auto;
+.desc{
+     position: absolute;
+     bottom: 20%;
+     left: 14%;
+     border: none;
      
 }
-.profile .alert .alert2{
-     display: block;
-     position: relative;
+
+/*style display for greetings*/
+.greet-alert{
+     position: absolute;
+     top: 15%;
+     right: 5%;
+     border: none ;
+     box-shadow: 1px 1px 0.2pc red;
+     border-radius: 5px;
+     width: 5.5cm;
+     height: 1.5cm;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     font-family: fantasy;
      font-size: 17px;
-     text-align: center;
-     top: -30%;
+     font-weight: bolder;
+}
+
+/*style display for date alert*/
+.date-alert{
+     position: absolute;
+     top: 50%;
+     right: 5%;
+     box-shadow: -1px 1px 0.2pc red;
+     border: none;
      border-radius: 5px;
-     margin: 0px;
+     width: 5.5cm;
+     height: 1.5cm;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+     font-size: 18px;
+}
+
+/*style display for reminder*/
+.remind{
+     position: absolute;
+     bottom: 2%;
+     left: 5%;
+     border: none;
+     border-radius: 5px;
+     width: 4.5cm;
+     height: 0.6cm;
+     display: flex;
+     justify-content: center;
+     align-items: center;
      
 }
+
 
 /*style the time zone*/
 .time{
@@ -81,7 +109,9 @@
 .time .hour{
      display: grid;
      grid-template-rows: 3fr 1fr;
-     background-color: rgb(139, 182, 231);
+     color: green;
+     background-color: rgb(204, 220, 238);
+     box-shadow: 1px 1px rgb(63, 63, 48);
      border-radius: 10%;
      top: 10%;
      position: relative;
@@ -108,7 +138,9 @@
 .time .mins{
      display: grid;
      grid-template-rows: 3fr 1fr;
-     background-color: rgb(139, 182, 231);
+     color: green;
+     background-color: rgb(204, 220, 238);
+     box-shadow: 1px 1px rgb(63, 63, 48);
      border-radius: 10%;
      top: 10%;
      position: relative;
@@ -159,17 +191,59 @@
      text-transform: uppercase;
      font-size: 13px;
 }
+
 /*responsive tablet modes */
-@media screen and (max-width: 959px){
+@media screen and (max-width: 1000px){
      .banner{
           display: grid;
           grid-template-rows: 1fr 1fr;
-          border: 1px solid black;
+          box-shadow: 1px 1px 1pc rgb(31, 26, 30) ;
           border-radius: 10px;
-          box-shadow: 5px 5px 5pc rgb(224, 22, 197) ;
+          margin: 10% auto;
+          width: 45%;
+          height: 10cm;
+     }
+     
+}
+/*responsive tablet modes */
+@media screen and (max-width: 980px){
+     .banner{
+          display: grid;
+          grid-template-rows: 1fr 1fr;
+          box-shadow: 1px 1px 1pc rgb(31, 26, 30) ;
+          border-radius: 10px;
+          margin: 10% auto;
+          width: 45%;
+          height: 10cm;
+     }
+     
+}
+
+/*responsive tablet modes */
+@media screen and (max-width: 880px){
+     .banner{
+          display: grid;
+          grid-template-rows: 1fr 1fr;
+          box-shadow: 1px 1px 1pc rgb(31, 26, 30) ;
+          border-radius: 10px;
           margin: 10% auto;
           width: 50%;
           height: 10cm;
+     }
+
+     .greet-alert{
+          width: 4.9cm;
+          height: 1.5cm;
+     }
+
+     .date-alert{
+          width: 4.9cm;
+          height: 1.5cm;
+     }
+
+     .remind{
+          width: 4.5cm;
+          height: 0.6cm;
      }
      
 }
@@ -178,12 +252,26 @@
      .banner{
           display: grid;
           grid-template-rows: 1fr 1fr;
-          border: 1px solid black;
           border-radius: 10px;
-          box-shadow: 5px 5px 5pc rgb(224, 22, 197) ;
+          box-shadow: 1px 1px 1pc rgb(31, 26, 30) ;
           margin: 15% auto;
-          width: 60%;
-          height: 10cm;
+          width: 55%;
+          height: 9.5cm;
+     }
+
+     .greet-alert{
+          width: 4.9cm;
+          height: 1.5cm;
+     }
+
+     .date-alert{
+          width: 4.9cm;
+          height: 1.5cm;
+     }
+
+     .remind{
+          width: 4.5cm;
+          height: 0.6cm;
      }
      
 }
@@ -192,12 +280,11 @@
      .banner{
           display: grid;
           grid-template-rows: 1fr 1fr;
-          border: 1px solid black;
           border-radius: 10px;
-          box-shadow: 5px 5px 5pc rgb(224, 22, 197) ;
+          box-shadow: 1px 1px 1pc rgb(31, 26, 30) ;
           margin: 15% auto;
-          width: 70%;
-          height: 10cm;
+          width: 62%;
+          height: 9.5cm;
      }
      
 }
